@@ -1,5 +1,5 @@
 # Editor release-wide properties
-editor.release.number=1.4.5_20061213
+editor.release.number=1.4.5_20070124
 editor.contributors=Lindsay Bradford, Moe Wynn
 compatible.engine.release.number=1.0-CR1
 compatible.engine.jar.name=YAWLBeta7.1.jar
