@@ -287,9 +287,7 @@
     
 		<zip destfile="${source.archive}">
       <zipfileset dir="${source.directory}" prefix="source"/>
-		  <zipfileset dir="${library.directory}" prefix="lib">
-		    <exclude name="${compatible.engine.jar.name}" />
-		  </zipfileset>
+		  <zipfileset dir="${library.directory}" prefix="lib"/>
 		  <zipfileset dir="${tool.directory}" prefix="tools" />
 		</zip>
    
